# Conways_life_game

./: .gitignore  CMakeLists.txt  README.md  cell.h  main.cpp  manual_control.cpp  manual_control.h  playing_field.cpp  playing_field.h
